--- a/index.html
+++ b/index.html
@@ -262,97 +262,95 @@
     </section>
 
 
-<section id="seсtion-4" class="portfolio-4">
+<section id="section-4" class="portfolio-4">
     <div class="container"> 
-             <h2 class="portfolio">Our Portfolio</h2>
-               <ul class="portfolio-list">
-                        <li class="portfolio-item">
-                    <div class="portfolio-image-wrapper">
-                          <img src="./images/port1.jpg" alt="application" width="360">
-                          <p class="overlay-text">
-                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                            Cloud Storage App
-                            </p>
-                    </div>
-                          <div  class="portfolio-info">
-                              <h3 class="portfolio-title">Banking App</h3>
-                                <p class="portfolio-desc">App</p>
-                           </div>
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+            <li class="portfolio-item">
+                <div class="portfolio-image-wrapper">
+                    <img src="./images/port1.jpg" alt="Banking application" width="360">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · 
+                        Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
+                <div class="portfolio-info">
+                    <h3 class="portfolio-name">Banking App</h3>
+                    <p class="portfolio-category">App</p>
+                </div>
+            </li>
+
+            <li class="portfolio-item">
+                <div class="portfolio-image-wrapper">
+                    <img src="./images/port2.jpg" alt="Cashless payment" width="360">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · 
+                        Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
+                <div class="portfolio-info">
+                    <h3 class="portfolio-name">Cashless Payment</h3>
+                    <p class="portfolio-category">Marketing</p>
+                </div>
+            </li>
+
+            <li class="portfolio-item">
+                <div class="portfolio-image-wrapper">
+                    <img src="./images/port3.jpg" alt="Meditation app" width="360">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · 
+                        Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
+                <div class="portfolio-info">
+                    <h3 class="portfolio-name">Meditation App</h3>
+                    <p class="portfolio-category">App</p>
+                </div>
+            </li>
+
+            <li class="portfolio-item">
+                <div class="portfolio-image-wrapper">
+                    <img src="./images/port4.jpg" alt="Taxi service" width="360">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · 
+                        Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
+                <div class="portfolio-info">
+                    <h3 class="portfolio-name">Taxi Service</h3>
+                    <p class="portfolio-category">Marketing</p>
+                </div>
+            </li>
+
+            <li class="portfolio-item">
+                <div class="portfolio-image-wrapper">
+                    <img src="./images/port5.jpg" alt="Screen illustrations" width="360">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · 
+                        Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                </div>
+                <div class="portfolio-info">
+                    <h3 class="portfolio-name">Screen Illustrations</h3>
+                    <p class="portfolio-category">Design</p>
+                </div>
+            </li>
+
+            <li class="portfolio-item">
+                <div class="portfolio-image-wrapper">
+                    <img src="./images/port6.jpg" alt="Online courses" width="360">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker AppExotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>
+                        <div class="portfolio-info">
+                            <h3 class="portfolio-name">Online Courses</h3>
+                            <p class="portfolio-category">Marketing</p>
+                        </div>
                         </li>
-<li class="portfolio-item">
-    <div class="portfolio-image-wrapper">
-        <img src="./images/port2.jpg" alt="Cashless" width="360">
-        <p class="overlay-text">
-            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-            Ecommerce App · Cloud Storage App
-        </p>
-    </div>
-    <div class="portfolio-info">
-        <h3 class="portfolio-title">Cashless Payment</h3>
-        <p class="portfolio-desc">Marketing</p>
-    </div>
-</li>
-                         
-
-                         <li class="portfolio-item">
-                            <div class="portfolio-image-wrapper">
-                                  <img src="./images/port3.jpg" alt="Meditation" width="360">
-                                <p class="overlay-text">
-                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-                                Ecommerce App · Cloud Storage App
-                                </p>
-                                </div>
-                                  <div class="portfolio-info">
-                                     <h3 class="portfolio-title">Meditation App</h3>
-                                       <p class="portfolio-desc">App</p>
-                                  </div>
-                          </li>
-
-<li class="portfolio-item">
-    <div class="portfolio-image-wrapper">
-    <img src="./images/port4.jpg" alt="Taxi Service" width="360">
-    <p class="overlay-text">
-        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-        Ecommerce App · Cloud Storage App
-    </p>
-    </div>
-    <div class="portfolio-info">
-    <h3 class="portfolio-title">Taxi Service</h3>
-    <p class="portfolio-desc">Marketing</p>
-    </div>
-</li>
-
-<li class="portfolio-item">
-    <div class="portfolio-image-wrapper">
-    <img src="./images/port5.jpg" alt="Illustrations" width="360">
-    <p class="overlay-text">
-        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-        Ecommerce App · Cloud Storage App
-    </p>
-    </div>
-    <div class="portfolio-info">
-        <div class="portfolio-image-wrapper">
-    <h3 class="portfolio-title">Screen Illustrations</h3>
-    <p class="portfolio-desc">Design</p>
-    </div>
-</li>
-
-      <li class="portfolio-item">
-      <div class="portfolio-image-wrapper">
-       <img src="./images/port6.jpg" alt="Courses" width="360">
-        <p class="overlay-text">
-        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-        Ecommerce App · Cloud Storage App
-        </p>
-          </div>    
-          <div class="portfolio-info">       
-         <h3 class="portfolio-title">Online Courses</h3>
-           <p class="portfolio-desc">Marketing</p>
-         </div>
-        </li>
-
-</ul>
-</div>
+                        </ul>
+                        </div>
+                        
 </section>
 
 </main>
