--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
                 <div class="portfolio-image-wrapper">
                     <img src="./images/port6.jpg" alt="Online courses" width="360">
                     <p class="overlay-text">
-                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker AppExotic Fruit Ecommerce App · Cloud Storage App
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                        Cloud Storage App
                         </p>
                         </div>
                         <div class="portfolio-info">
