--- a/index.html
+++ b/index.html
@@ -113,28 +113,28 @@
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-role">Product Designer</p>
                            <ul class="social-items">
-                               <li>
+                               <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
-                                </li>
-                                <li>
+                                </li >
+                                <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
-                                <li>
+                                <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
-                                 <li>
+                                 <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -151,14 +151,14 @@
                         <h3 class="team-name">Tom Ford</h3>
                          <p class="team-role">Frontend Developer</p>
                         <ul class="social-items">
-                            <li>
+                            <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
@@ -172,7 +172,7 @@
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -188,21 +188,21 @@
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-role">Marketing</p>
                         <ul class="social-items">
-                            <li>
+                            <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li>
+                            <li class="socseti">
                                 <a class="social-link">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
@@ -215,7 +215,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li class="socseti">
                         </ul>
                     </div>
                 </li>
@@ -225,28 +225,28 @@
                         <h3 class="team-name">Daniel Wilson</h3>
                         <p class="team-role">UI Designer</p>
                             <ul class="social-items">
-                                <li>
+                                <li class="socseti">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="li-class-3">
+                                <li class="socseti">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="socseti">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="socseti">
                                     <a class="social-link">
                                         <svg class="icon-section-thee" width="16px" height="16px">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
