--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Web<span class="logoheader-part">Studio</span>
                 </a>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="./index.html">Studio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                 </ul>
