--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
                         <p class="team-role">Product Designer</p>
                            <ul class="social-items">
                                <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                                 </li >
                                 <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                                 </li>
                                 <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                                 </li>
                                  <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -152,28 +152,28 @@
                          <p class="team-role">Frontend Developer</p>
                         <ul class="social-items">
                             <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -189,28 +189,28 @@
                         <p class="team-role">Marketing</p>
                         <ul class="social-items">
                             <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="socseti">
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a class="social-link">
+                                <a class="social-link" href="#">
                                     <svg class="icon-section-thee" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
@@ -226,28 +226,28 @@
                         <p class="team-role">UI Designer</p>
                             <ul class="social-items">
                                 <li class="socseti">
-                                    <a class="social-link">
+                                    <a class="social-link" href="#">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="socseti">
-                                    <a class="social-link">
+                                    <a class="social-link" href="#">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="socseti">
-                                    <a class="social-link">
+                                    <a class="social-link" href="#">
                                         <svg class="icon-section-thee" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="socseti">
-                                    <a class="social-link">
+                                    <a class="social-link" href="#">
                                         <svg class="icon-section-thee" width="16px" height="16px">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
