--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
 </main>
    
  <footer class="footer">
-    <div class="page-footer">
-         <div class="container-footer-container">
+    <div class="container page-footer">
+         <div class="footer-lftcont">
             <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <p class="footer-text">
                 Increase the flow of customers and
