--- a/index.html
+++ b/index.html
@@ -330,8 +330,6 @@
                 </div>
             </li>
           </ul>
-
-
          <ul>
             <li class="portfolio-item">
                 <div class="portfolio-image-wrapper">
@@ -367,6 +365,7 @@
       
          </div>
   </div>
+</section>
 </main>
    
   <footer class="footer">
